--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "form-serialize": "^0.7.2",
     "history": "^3.0.2",
     "jquery-serializejson": "^2.8.1",
+    "leaflet": "^1.3.1",
+    "prop-types": "^15.6.1",
     "react": "^0.14.6",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^0.14.6",
+    "react-leaflet": "^1.9.1",
     "react-router": "^3.0.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
